web.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: web
  labels:
    name: web
spec:
  replicas: 4
  template:
    metadata:
      name: web
      labels:
        name: web
    spec:
      containers:
      - name: web
        image: naderganayem/web:latest
        ports:
        - containerPort: 5000
        imagePullPolicy: Never
      terminationGracePeriodSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    name: web
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis
  labels:
    name: redis
spec:
  replicas: 1
  template:
    metadata:
      name: redis
      labels:
        name: redis
    spec:
      containers:
      - name: redis
        image: redis
        ports:
        - containerPort: 6379
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    name: redis
  type: NodePort
  ports:
    - port: 6379
      targetPort: 6379
