web-ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: course
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: course.amdocs.com
    http:
      paths:
      - path: "/"
        backend:
          serviceName: web
          servicePort: 5000
